Fixed bug #32296 (get_class_methods output has changed between 5.0.2 and 5.0.3) Now get_class_methods() shows accessible private and protected methods if it is called from class scope.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@185698 c90b9560-bf6c-de11-be94-00142212c4b1